force-app/main/default/objects/MarketingAnswers__c/MarketingAnswers__c.object-meta.xml
<CustomObject>
    <label>Marketing Question Answers</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>RowNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Question Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>