force-app/main/default/objects/MarketingAnswers__c/fields/MarketingHierarchy__c.field-meta.xml
<CustomField>
    <fullName>MarketingHierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Hierarchy</label>
    <referenceTo>MarketingHierarchy__c</referenceTo>
    <relationshipLabel>Marketing Question Answers</relationshipLabel>
    <relationshipName>Marketing_Question_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>