force-app/main/default/objects/MarketingAnswers__c/fields/MarketingMainTable__c.field-meta.xml
<CustomField>
    <fullName>MarketingMainTable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing: Main Table</label>
    <referenceTo>MarketingMainTable__c</referenceTo>
    <relationshipLabel>Marketing Question Answers</relationshipLabel>
    <relationshipName>Marketing_Question_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>