force-app/main/default/objects/MarketingAnswers__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Questions</label>
    <referenceTo>MarketingQuestions__c</referenceTo>
    <relationshipLabel>Marketing Question Answers</relationshipLabel>
    <relationshipName>Marketing_Question_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>