force-app/main/default/objects/MarketingAnswers__c/fields/QuestionText__c.field-meta.xml
<CustomField>
    <fullName>QuestionText__c</fullName>
    <formula>Question__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question</label>
    <type>Text</type>
</CustomField>