force-app/main/default/objects/MarketingAnswers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MarketingMainTable__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>Year__c</columns>
    <columns>QuestionText__c</columns>
    <columns>Answer__c</columns>
    <columns>MarketingHierarchy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>